# ifctrano

./: 404.html  README.md  index.html  mkdocs.yml  noxfile.py  pyproject.toml
.github/workflows/: docs.yaml  pipeline.yaml  publish.yaml
docs/: index.md
docs/getting-started/: installation.md
docs/tutorials/: many_zones_model.md  multizone_model.md  realistic_model.md  two_zones_model.md  use_different_libraries.md
docs_src/: index.py
docs_src/getting_started/: installation.py
docs_src/tutorials/: tutorials.py
explanation/: index.html
getting-started/installation/: index.html
how-to guides/: index.html
ifctrano/: base.py  bounding_box.py  building.py  construction.py  exceptions.py  main.py  space_boundary.py
search/: search_index.json
tests/: conftest.py  test_bounding_box.py  test_building.py  test_construction.py  test_large_buildings.py  test_parse_ifc_with_space_boundary.py  test_space_boundary.py
tests/config/: test_building_layer_configuration.yaml  test_building_residential_house.yaml
tests/data/: test_architect.json  test_boundaries_multi_zone.json  test_boundaries_multi_zone_internal.json  test_boundaries_smiley_west.json  test_building_duplex_apartment.json  test_building_layer.json  test_building_multizone.json  test_building_residential_house.json  test_building_two_zone.json  test_building_two_zone_adjacency.json  test_example_hom.json  test_get_space_boundaries.json  test_get_space_boundaries_another_space.json  test_get_space_boundaries_another_space_0BTBFw6f90Nfh9rP1dl_3A.json  test_get_space_boundaries_multizone.json  (+23 more)
(+30 files in other folders)
