[tool.poetry]
name = "ifctrano"
version = "0.1.0"
description = "Package for generating building energy simulation model from IFC"
authors = ["aan <andoludovic.andriamamonjy@gmail.com>"]
license = "GPL V3"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
ifcopenshell = "^0.8.1.post1"
pydantic = "^2.10.6"


[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
nox = "^2023.4.22"
ruff = "^0.3.0"
pre-commit = "^3.6.2"
pandas-stubs = "^2.2.0.240218"
types-simplejson = "^3.19.0.20240218"
types-beautifulsoup4 = "^4.12.0.20240229"
pytest-mongo = "^3.1.0"
networkx-stubs = "^0.0.1"
pytest-ordering = "^0.6"
types-pyyaml = "^6.0.12.20240808"
isort = "^5.13.2"
jsf = "^0.11.2"
black = "^24.10.0"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
